# asgard

./: .coverage  .gitignore  ASGARD_IMPROVEMENT_AUDIT.md  CHANGELOG.md  DEPENDENCY_REPORT.md  GAIA_CLEANUP_INFRACTIONS.md  LICENSE  README.md  pyproject.toml  setup.py
Asgard/: __init__.py  cli.py
Asgard/Dashboard/services/: _html_css_components.py  _html_renderer_pages.py  _html_templates.py  html_renderer.py
Asgard/Forseti/: README.md  __init__.py  cli.py
Asgard/Forseti/AsyncAPI/: __init__.py
Asgard/Forseti/Avro/: __init__.py
Asgard/Forseti/CodeGen/: __init__.py
Asgard/Forseti/Contracts/: __init__.py
Asgard/Forseti/Database/: __init__.py
Asgard/Forseti/Documentation/: __init__.py
Asgard/Forseti/GraphQL/: __init__.py
Asgard/Forseti/MockServer/: __init__.py
Asgard/Forseti/OpenAPI/: __init__.py
Asgard/Forseti/Protobuf/: __init__.py
Asgard/Freya/: README.md  __init__.py  cli.py
Asgard/Heimdall/: README.md  __init__.py
Asgard/Heimdall/Architecture/: __init__.py
Asgard/Heimdall/CodeFix/: __init__.py
Asgard/Heimdall/Dependencies/: __init__.py
Asgard/Heimdall/Init/: linter_initializer.py
Asgard/Heimdall/Issues/: __init__.py
Asgard/Heimdall/OOP/: __init__.py
Asgard/Heimdall/Performance/: __init__.py
Asgard/Heimdall/Quality/: __init__.py
Asgard/Heimdall/Security/: __init__.py
Asgard/Heimdall/cli/: common.py  handlers.py  main.py
Asgard/Heimdall/common/: _new_code_git.py
Asgard/MCP/: __init__.py
Asgard/MCP/models/: __init__.py  mcp_models.py
Asgard/MCP/server/: __init__.py  asgard_mcp_server.py
Asgard/Reporting/: __init__.py  _html_report_builders.py  html_generator.py
Asgard/Verdandi/: README.md  __init__.py  cli.py
Asgard/Verdandi/APM/: __init__.py
Asgard/Verdandi/Analysis/: __init__.py
Asgard/Verdandi/Anomaly/: __init__.py
Asgard/Verdandi/Cache/: __init__.py
Asgard/Verdandi/Database/: __init__.py
Asgard/Verdandi/Network/: __init__.py
Asgard/Verdandi/SLO/: __init__.py
Asgard/Verdandi/System/: __init__.py
Asgard/Verdandi/Tracing/: __init__.py
Asgard/Verdandi/Trend/: __init__.py
Asgard/Verdandi/Web/: __init__.py
Asgard/Volundr/: COMPATIBILITY.md  README.md  __init__.py  cli.py
Asgard/common/: baseline.py  progress.py
Asgard/config/: _models_volundr.py  defaults.py  models.py  models_security.py
Asgard_Test/: README.md  pytest.ini
Asgard_Test/L2_CrossPackage/: QUICK_START.md  README.md  TEST_SUMMARY.md
Asgard_Test/test_utils/: SUMMARY.md
Asgard_Test/tests_Heimdall/: SECURITY_COVERAGE_AUDIT.md
_GAIA Documentation/: Asgard-Module-Expansion-Plan.md
(+140 files in other folders)
