[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Asgard"
version = "1.0.0"
description = "Asgard - GAIA Development Tools Suite"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "GAIA Team", email = "team@gaia.ai"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "jsonschema>=4.0",
    "playwright>=1.40.0",
    "Pillow>=10.0.0",
    "beautifulsoup4>=4.12.0",
    "Jinja2>=3.1.0",
]

[project.optional-dependencies]
heimdall = [
    "bandit>=1.7.0",
    "memory-profiler>=0.60.0",
]
freya = [
    "numpy>=1.24.0",
    "scikit-image>=0.21.0",
    "opencv-python>=4.8.0",
    "cssutils>=2.7.0",
    "Jinja2>=3.1.0",
]
forseti = [
    "openapi-spec-validator>=0.5.0",
    "openapi-schema-validator>=0.6.0",
    "graphql-core>=3.2.0",
    "sqlalchemy>=2.0",
]
volundr = [
    "python-hcl2>=4.0.0",
]
all = [
    "bandit>=1.7.0",
    "memory-profiler>=0.60.0",
    "numpy>=1.24.0",
    "scikit-image>=0.21.0",
    "opencv-python>=4.8.0",
    "cssutils>=2.7.0",
    "Jinja2>=3.1.0",
    "openapi-spec-validator>=0.5.0",
    "openapi-schema-validator>=0.6.0",
    "graphql-core>=3.2.0",
    "sqlalchemy>=2.0",
    "python-hcl2>=4.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
asgard = "Asgard.cli:main"
heimdall = "Asgard.Heimdall.cli:main"
freya = "Asgard.Freya.cli:main"
forseti = "Asgard.Forseti.cli:main"
verdandi = "Asgard.Verdandi.cli:main"
volundr = "Asgard.Volundr.cli:main"

[project.urls]
Homepage = "https://github.com/gaia/asgard"
Documentation = "https://github.com/gaia/asgard#readme"
Repository = "https://github.com/gaia/asgard"

[tool.setuptools.packages.find]
exclude = ["Asgard_Test", "Asgard_Test.*"]

[tool.pytest.ini_options]
testpaths = ["Asgard_Test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
